Align feature and community and fix margins

--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,7 @@ Section 1
 	height: 100%;
 }
 
+
 h2 {
 	color: #1C1C1C;
 	text-align: center;
@@ -128,7 +129,7 @@ h2 {
 	padding-bottom: 1rem;
 	font-family: Rozha+One&display, serif;
 	border: 1px solid #000000;
-	margin: 1rem;
+	margin: 1rem 1rem;
 }
 
 /*====================================
@@ -137,21 +138,25 @@ Features
 
 .features {
 	display: flex;
+	column-gap: 0.5rem;
+	margin: 1rem 1rem;
 }
 
 .feature img {
 	display: block;
+
+}
+
+.feature p {
+	padding-top: 1rem;
+	padding-bottom: 1rem;
 }
 
 .feature img,
 .feature p {
 	margin: auto;
-	padding-bottom: 1rem;
-	width: 89%;
-}
-
-.feature p {
-	padding-top: 1rem;
+	width: 100%;
+	padding-bottom: 0.5rem;
 }
 
 /*====================================
@@ -160,30 +165,33 @@ Community
 
 .community {
 	display: flex;
-	padding: 1rem .45rem;
+	margin: 0 1rem;
+	column-gap: 0.5rem;
 }
 
 .community img {
 	display: block;
-	width: 55%;
+	width: 60%;
+	max-height: 75%;
 	overflow: hidden;
-	padding-left: .05rem;
+
 }
 
 .community img,
 .community p {
 	margin: auto;
-	min-height: 13.5rem;
+	height: 15rem;
 }
 
 .community p {
 	grid-column-start: 2;
 	grid-column-end: span 1;
-	width: 35%;
+	width: 40%;
 	overflow: hidden;
-	margin-right: 1.8rem;
 	text-align: center;
 	padding-top: 10%;
+
+
 }
 
 /*===================================
@@ -192,6 +200,7 @@ Footer
 
 .page-footer {
 	background-color: #454545;
+	margin-top: 1rem;
 }
 
 .copyright {
